--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="keywords,here">
     <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
     <link href="https://fonts.googleapis.com/css?family=Lato|Merriweather&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="mystyles.css" type="text/css">
+    <!-- <link rel="stylesheet" href="mystyles.css" type="text/css"> -->
 </head>
 
 <body>
@@ -25,7 +25,6 @@
                 <!-- add a publish date here inside a time tag -->
             </div>
             <div class="article-photo">
-                <img class="photo" src="images/US open.jpg" alt="Final of US open in Queens, NY">
                 <!-- add a photo here inside an img tag -->
                 <!-- add a caption and credit to your photo in -->
                 <span class="photo-caption"> US Open 2019 in Queens, New York, September 09, 2018. Photograph: McCarton Ackerman
@@ -33,7 +32,7 @@
             </div>
             <div class="article-copy">
                 <P> On Wednesday 28th August around 11 p.m hundreds of people get out at Mets-Willets Point station in Queens. The reason ? They want to see their favourite athletes like Roger Federer, Rafael Nadal, Serena Williams, Naomi Osaka or Novak Djokovic competing for the U.S. Open title. Like every summer the ‘Grand Slam’ tournament takes place in Billie Jean King National Tennis Center in Flushing Meadows-Corona. And according to the United States Tennis Association (U.S.T.A), the tournament generates more than $750 million per year to New York City. </p><!-- add your article text here inside p tags -->
-                <iframe title="Gender pay gap in EU's countries (%)" aria-label="Bar Chart" id="datawrapper-chart-gUFgh" src="//datawrapper.dwcdn.net/gUFgh/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="467"></iframe>
+                <iframe title="Gender pay gap in EU's countries (%)" aria-label="Bar Chart" id="datawrapper-chart-gUFgh" src="//datawrapper.dwcdn.net/gUFgh/3/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="467"></iframe>
                 <script type="text/javascript">
                 ! function() { "use strict";
                     window.addEventListener("message", function(a) { if (void 0 !== a.data["datawrapper-height"])
@@ -45,7 +44,7 @@
                 </p>
                 <P> The U.S.T.A. is also criticized since the City Comptroller’s Office released a report last week suggesting that the U.S. Tennis Association owes New York city $311,000 unpaid rent for the Billie Jean King National Tennis Center., reported the Washington Post. In 1993, U.S.T.A and New York City Parks Department signed a 99-year lease that required the organization pay an annual base of $400,000 to the city to operate in Flushing Meadows-Corona Park. </P>
             </div>
-            <div class="related-stories" <ul><a href="related-stories">Read related stories</a>
+            <div class="related-stories">related stories
                 <ul style="list-style-type: circle;">
                     <li><a href="https://romangressier.github.io/tijuana/">Las voces silenciadas en la frontera</a></li>
                     <li><a href="https://ewheless.github.io/my-first-article/">You’re in the Bike Lane, And You’re Not a Bike</a></li>
