--- a/Index.html
+++ b/Index.html
@@ -32,13 +32,19 @@
             </div>
             <div class="article-copy">
                 <P> On Wednesday 28th August around 11 p.m hundreds of people get out at Mets-Willets Point station in Queens. The reason ? They want to see their favourite athletes like Roger Federer, Rafael Nadal, Serena Williams, Naomi Osaka or Novak Djokovic competing for the U.S. Open title. Like every summer the ‘Grand Slam’ tournament takes place in Billie Jean King National Tennis Center in Flushing Meadows-Corona. And according to the United States Tennis Association (U.S.T.A), the tournament generates more than $750 million per year to New York City. </p><!-- add your article text here inside p tags -->
-                <iframe title="Gender pay gap in EU's countries (%)" aria-label="Bar Chart" id="datawrapper-chart-gUFgh" src="//datawrapper.dwcdn.net/gUFgh/3/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="467"></iframe>
-                <script type="text/javascript">
-                ! function() { "use strict";
-                    window.addEventListener("message", function(a) { if (void 0 !== a.data["datawrapper-height"])
-                            for (var e in a.data["datawrapper-height"]) { var t = document.getElementById("datawrapper-chart-" + e) || document.querySelector("iframe[src*='" + e + "']");
-                                t && (t.style.height = a.data["datawrapper-height"][e] + "px") } }) }();
-                </script>
+                <!-- <iframe title="Gender pay gap in EU's countries (%)" aria-label="Bar Chart" id="datawrapper-chart-gUFgh" src="//datawrapper.dwcdn.net/gUFgh/3/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="467"></iframe>
+<script type="text/javascript">
+! function() {
+    "use strict";
+    window.addEventListener("message", function(a) {
+        if (void 0 !== a.data["datawrapper-height"])
+            for (var e in a.data["datawrapper-height"]) {
+                var t = document.getElementById("datawrapper-chart-" + e) || document.querySelector("iframe[src*='" + e + "']");
+                t && (t.style.height = a.data["datawrapper-height"][e] + "px")
+            }
+    })
+}();
+</script> -->
                 <p>Best Western hotel located in Roosevelt Avenue, five minutes from the 111th Street station, is one of the business that benefits from the U.S Open. ‘The tennis Open has an undeniable impact on the local economy. Business is better at that time’ says Anup Chaudan, General Manager at Best Western Plus La Guardia Airport Hotel. ‘It is a big attraction that brings tourists from the entire world but mostly from Europe, explain the manager, Our 90 rooms have been booked for months now’. </p>
                 <p> Carole Tremol, 32, a local resident since 2016 agreed that the area benefits from the tournament ‘ It does impact the area during the Open. Attendees can grab something to drink or eat here but Flushing is very quiet when it is not happening. I don’t think that the U.S Open is creating long-term jobs nor boost the economy here’ She also argues that the ‘Grand Slam’ is seen as an inconvenience for some residents. ‘Communities around bear different issues like traffic or construction related to the complex’. The U.S.T.A. tennis center that hosts U.S. Open since 1978 has been in the middle of a <span class="bold">$600 million renovation for four years</span>.
                 </p>
